--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <article class="hero-info">
           <div class="underline"></div>
           <h1>i'm Arnabh</h1>
-          <h4>freelance web devloper and coder</h4>
+          <h4>Web devloper and coder</h4>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
           <ul class="social-icons hero-icons">
